fix code not scroll in x on mobile chrome

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -13,6 +13,10 @@
   white-space: pre;       // forces <code> to respect <pre> formatting
 }
 
+pre {
+  word-wrap: normal;    //make code scrolling in x on mobile chrome 20170711
+}
+
 pre code {
   white-space: pre;    //make code scrolling in x 20170711
 }
